# devlog

./: .gitignore  Cargo.toml  README.md
devlog-cli/: Cargo.toml
devlog-cli/src/: context.rs  llm.rs  main.rs
devlog-cli/src/cmd/: api.rs  mod.rs  setup.rs  standup.rs
devlog-core/: Cargo.toml
devlog-core/src/: lib.rs
devlogd/: Cargo.toml
devlogd/migrations/: 20260516074956_events.sql  20260517044326_add_event_indexes.sql  20260517052635_add_event_key.sql  20260517112406_project-table.sql
devlogd/src/: helper.rs  ipc.rs  main.rs
devlogd/src/event/: event.rs  kind.rs  mod.rs
devlogd/src/event/payload/: commit.rs  mod.rs
devlogd/src/project/: mod.rs
devlogd/src/store/: db.rs  events.rs  mod.rs  project.rs  row.rs
devlogd/src/watchers/: files.rs  git.rs  mod.rs
