

[workspace]
members = [
    "devlogd",
    "devlog-cli"
, "demo/project1", "demo/project2", "demo/project3", "demo/project4"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies go here - all crates can reference them
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
walkdir = "2"
