[package]
name = "devlog-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devlog"
path = "src/main.rs"

[dependencies]
# Reference workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
inquire = "0.9.4"
devlog-core = { path = "../devlog-core" } 
dotenvy = "0.15"
