[package]
name = "devlogd"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reference workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
devlog-core = { path = "../devlog-core" }

# Daemon-specific dependencies
notify = "8.2.0"
sha2 = "0.10"
hex = "0.4"
